# bkr_nwipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.sh  configure.ac  setup.sh  ssd-guide.md  update.sh
.github/workflows/: ci_runtime.yml
docs/: testing-and-ci-plan.md
man/: Makefile.am  wype.8
src/: ANSI-color-codes.h  Makefile.am  api_server.c  api_server.h  conf.c  conf.h  context.h  cpu_features.h  create_pdf.c  create_pdf.h  create_single_disc_pdf.c  create_system_multi_disc_pdf.c  customers.c  customers.h  dashboard_register.c  dashboard_register.h  device.c  device.h  display_help.c  gui.c  gui.h  hpa_dco.c  hpa_dco.h  logging.c  logging.h  method.c  method.h  miscellaneous.c  miscellaneous.h  options.c  options.h  pass.c  pass.h  pass_internal.c  pass_internal.h  pass_random.c  pass_static.c  prng.c  prng.h  round_size.c  (+10 more)
src/aes/: aes_ctr_prng.h
src/chacha20/: chacha20.c  chacha20.h  chacha20_test.c  chacha20_test.h  chacha20_test_vectors.c
src/embedded_images/: logo.jpg.c  logo.jpg.h  wype_exclamation.jpg.c  wype_exclamation.jpg.h
src/hddtemp_scsi/: get_scsi_temp.c  scsi.c
src/mt19937ar-cok/: mt19937ar-cok.c  mt19937ar-cok.h
src/splitmix64/: splitmix64.c  splitmix64.h
src/xor/: README.md
tests/ci/: fault_injection.sh  loopback_e2e.sh
tests/unit/: test_round_size.c
